[package]
name = "firefox_resumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"
itertools = "0.12.0"
once_cell = "1.19.0"
# reqwest = "0.11.23"
# scraper = "0.18.1"
toml = "0.8.8"
